tests/api/reference/negative/12-list-push-type.asm
const invalid: list = list.push(1, 2)
